2005-04-12  Miguel de Icaza  <miguel@novell.com>

	* typemanager.cs (IsUnmanagedType): Arrays are allowed.

2005-04-11  Marek Safar  <marek.safar@seznam.cz>

	Fix# 74565
	* class.cs (TypeContainer.CircularDepException) New nested
	exception class.
	(GetPartialBases, GetNormalBases, GetClassBases): Removed error.
	(TypeContainer.DefineType): Removed error, reset InTransit before
	exit.
	(Class.DefineType): Throw exception when is in Transit.
	Catch exception and report error.
	(Struct.DefineType): Throw exception when is in Transit.
	Catch exception and report error.
	(Interface.DefineType): Throw exception when is in Transit.
	Catch exception and report error.
	
	* codegen.cs: Add InCatch,InFinally to EmitContext to easily
	handle nested exception handlers.

	* flowanalysis.cs (InTryWithCatch): New method, search for try with
	a catch.
	
	* iterators.cs (Yield.CheckContext): Add CS1626 report. Updated
	InFinally and InCatch storage.
	
	* statement.cs (Throw.Resolve): Use InCatch, InFinally from ec.
	(Catch.Resolve): Set and Restore ec.InCatch.
	(Try.Resolve): Set and Restore ec.InFinally.
	(Try.HasCatch): True when try has catch.

2005-04-10  Miguel de Icaza  <miguel@novell.com>

	* driver.cs (MainDriver): Stop processing if the CLS stage found
	errors. 

	(CompilerCallableEntryPoint.InvokeCompiler): Always
	reset after execution;   Take a TextWriter argument for the
	output.

	* report.cs: Use the error stream instead of hardcoding stderr. 

2005-04-09  Miguel de Icaza  <miguel@novell.com>

	* class.cs: Reduce code paths to test, too small of an
	optimization to make it worth the extra testing.  Always perform
	it. 

2005-04-08  Raja R Harinath  <rharinath@novell.com>

	Fix #74510.
	* class.cs (OperatorArrayList.CheckPairedOperators): Skip
	operators that had errors reported on them.

2005-04-08  Marek Safar  <marek.safar@seznam.cz>

	* attribute.cs (Attribute.IsValidArgumentType): Test valid named
	argument types.