@@ -1,3 +1,8 @@
+2005-04-13  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* doc.cs : delegates must not be referenced with parameters.
+	  Fixed bug #71605.
+
 2005-04-12  Miguel de Icaza  <miguel@novell.com>
 
 	* typemanager.cs (IsUnmanagedType): Arrays are allowed.
